--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,20 @@
-compiled/
-.ligo/
-_esy/
-.env
-scripts/drops.json
-.DS_Store
-node_modules
+# ami & eli definitions
+__tea/.ami-definitions/eli/*
+!__tea/.ami-definitions/eli/.gitkeep
+__tea/.ami-definitions/ami/*
+!__tea/.ami-definitions/ami/.gitkeep
+__tea/bin/*
+!__tea/bin/.gitkeep
+
+# ligo
+**/.ligo-work
+.ligo/*
+_esy/*
+
+# build
+build/*
+!build/.gitkeep
+
+# deploy
+deploy/*
+!deploy/.gitkeep
