--- a/web/package.json
+++ b/web/package.json
@@ -17,10 +17,19 @@
   "author": "alis.is",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "ava": "^5.0.1",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "hjson": "^3.2.2",
     "lodash-es": "^4.17.21",
+    "npm-check-updates": "^16.3.16",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.7.1",
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
@@ -29,8 +38,5 @@
     "@taquito/taquito": "^14.0.0",
     "@taquito/tzip12": "^14.0.0",
     "@taquito/tzip16": "^14.0.0"
-  },
-  "dependencies": {
-    "npm-check-updates": "^16.3.16"
   }
 }
