--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,9 @@
     "build": "run-p build:*",
     "build:es": "tsc --outDir dist/es --module esnext",
     "build:cjs": "tsc --outDir dist/cjs --module commonjs",
-    "update-deps": "ncu --interactive --dep 'prod,dev,bundle,optional,peer'"
+    "update-deps": "ncu --interactive --dep 'prod,dev,bundle,optional,peer'",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "author": "alis.is",
   "license": "MIT",
@@ -21,9 +23,7 @@
     "@typescript-eslint/parser": "^5.42.0",
     "ava": "^5.0.1",
     "eslint": "^8.27.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "hjson": "^3.2.2",
     "lodash-es": "^4.17.21",
