--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,9 @@
-# ami & eli definitions
-__tea/.ami-definitions/eli/*
-!__tea/.ami-definitions/eli/.gitkeep
-__tea/.ami-definitions/ami/*
-!__tea/.ami-definitions/ami/.gitkeep
-__tea/bin/*
-!__tea/bin/.gitkeep
-
-# ligo
-**/.ligo-work
-.ligo/*
-_esy/*
-
-# build
-build/*
-!build/.gitkeep
-
-# deploy
-deploy/*
-!deploy/.gitkeep
-
-# esy (ligo packages)
-esy.lock
-_esy
+**/node_modules
+.DS_Store
+.ligo/
+_esy/
+/compiled
+**/compiled
+testdata/
+!testdata/token.tz
+!testdata/token_storage.tz
