--- a/web/package.json
+++ b/web/package.json
@@ -14,29 +14,36 @@
     "build:cjs": "tsc --outDir dist/cjs --module commonjs",
     "update-deps": "ncu --interactive --dep 'prod,dev,bundle,optional,peer'",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "sandbox:start": "./tests/scripts/run-sandbox",
+    "sandbox:stop": "docker stop sandbox",
+    "generate:drops": "node ./tests/scripts/generate-drops.mjs"
   },
   "author": "alis.is",
   "license": "MIT",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
-    "ava": "^5.0.1",
-    "eslint": "^8.27.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "ava": "^5.1.0",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "hjson": "^3.2.2",
     "lodash-es": "^4.17.21",
-    "npm-check-updates": "^16.3.16",
+    "merkletreejs": "^0.3.9",
+    "npm-check-updates": "^16.6.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.7.1",
-    "typescript": "^4.8.4"
+    "prettier": "2.8.1",
+    "sotez": "^13.0.1",
+    "typescript": "^4.9.4"
   },
   "peerDependencies": {
-    "@taquito/michel-codec": "^14.0.0",
-    "@taquito/signer": "^14.0.0",
-    "@taquito/taquito": "^14.0.0",
-    "@taquito/tzip12": "^14.0.0",
-    "@taquito/tzip16": "^14.0.0"
+    "@taquito/michel-codec": "^15.0.1",
+    "@taquito/signer": "^15.0.1",
+    "@taquito/taquito": "^15.0.1",
+    "@taquito/tzip12": "^15.0.1",
+    "@taquito/tzip16": "^15.0.1"
   }
 }
