--- a/app/.env
+++ b/app/.env
@@ -31,3 +31,7 @@ DATABASE_URL="mysql://root:secret@127.0.0.1:3306/app?serverVersion=5.7&charset=u
 
 # browsersync
 PROXY=http://127.0.0.1:8000/
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
