--- a/app/composer.json
+++ b/app/composer.json
@@ -85,6 +85,7 @@
   "require-dev": {
     "doctrine/doctrine-fixtures-bundle": "^3.4",
     "friendsofphp/php-cs-fixer": "^3.13",
+    "nelmio/cors-bundle": "^2.2",
     "symfony/debug-bundle": "6.2.*",
     "symfony/maker-bundle": "^1.48",
     "symfony/stopwatch": "6.2.*",
