--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,1 +1,1 @@
-{ "dependencies": { "@ligo/fa": "^1.0.0", "ligo-breathalyzer": "^1.2.1" } }
+{ "dependencies": { "@ligo/fa": "1.0.0", "ligo-breathalyzer": "^1.2.1" } }
