--- a/app/composer.json
+++ b/app/composer.json
@@ -11,6 +11,7 @@
     "doctrine/doctrine-bundle": "^2.8",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.14",
+    "hautelook/alice-bundle": "^2.12",
     "symfony/apache-pack": "^1.0",
     "symfony/asset": "6.2.*",
     "symfony/console": "6.2.*",
@@ -86,6 +87,7 @@
     "doctrine/doctrine-fixtures-bundle": "^3.4",
     "friendsofphp/php-cs-fixer": "^3.13",
     "nelmio/cors-bundle": "^2.2",
+    "phpstan/phpstan": "^1.10",
     "symfony/debug-bundle": "6.2.*",
     "symfony/maker-bundle": "^1.48",
     "symfony/stopwatch": "6.2.*",
