--- a/contracts/web/package.json
+++ b/contracts/web/package.json
@@ -14,10 +14,7 @@
     "build:cjs": "tsc --outDir dist/cjs --module commonjs",
     "update-deps": "ncu --interactive --dep 'prod,dev,bundle,optional,peer'",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "sandbox:start": "./tests/scripts/run-sandbox",
-    "sandbox:stop": "docker stop sandbox",
-    "generate:drops": "node ./tests/scripts/generate-drops.mjs"
+    "lint:fix": "eslint . --fix"
   },
   "author": "alis.is",
   "license": "MIT",
@@ -36,7 +33,6 @@
     "npm-check-updates": "^16.7.12",
     "npm-run-all": "^4.1.5",
     "prettier": "2.8.4",
-    "sotez": "^13.0.1",
     "typescript": "^5.0.2"
   },
   "peerDependencies": {
