fix(app) initial db

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,7 +5,9 @@ services:
       image: 'mysql:5.7'
       environment:
           MYSQL_ROOT_PASSWORD: secret
-          MYSQL_DATABASE: app
+          MYSQL_DATABASE: my_app
+          MYSQL_USER: my_app
+          MYSQL_PASSWORD: secret
       ports:
         - '3306:3306'
       volumes:
