--- a/app/composer.json
+++ b/app/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4",
+        "cakephp/authentication": "^2.0",
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
@@ -15,6 +16,7 @@
         "cakephp/bake": "^2.6",
         "cakephp/cakephp-codesniffer": "^4.5",
         "cakephp/debug_kit": "^4.5",
+        "dereuromark/cakephp-ide-helper": "^1.18",
         "josegonzalez/dotenv": "^3.2",
         "phpunit/phpunit": "~8.5.0 || ^9.3"
     },
