--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   db:
       image: 'mysql:5.7'
+      command:  --character-set-server=utf8mb4 --collation-server=utf8mb4_general_ci
       environment:
           MYSQL_ROOT_PASSWORD: secret
           MYSQL_DATABASE: my_app
