--- a/app/composer.json
+++ b/app/composer.json
@@ -10,6 +10,7 @@
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
+        "ishanvyas22/asset-mix": "^1.5",
         "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
