--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,10 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@hotwired/stimulus-webpack-helpers": "^1.0.1",
         "@popperjs/core": "^2.9",
-        "axios": "^1.3.4",
+        "@siwt/sdk": "^0.0.3",
+        "axios": "^1.3",
         "bootstrap": "^5.0.0",
         "cross-env": "^7.0",
         "jquery": "^3.6",
@@ -20,5 +22,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@hotwired/stimulus": "^3.2.1"
     }
 }
