--- a/app/composer.json
+++ b/app/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": ">=7.4",
+        "bzzhh/pezos": "^0.1.5",
         "cakephp/authentication": "^2.0",
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
