--- a/app/package.json
+++ b/app/package.json
@@ -9,21 +9,16 @@
         "prod": "npm run production",
         "production": "mix --production"
     },
-    "devDependencies": {
-        "@hotwired/stimulus-webpack-helpers": "^1.0.1",
-        "@popperjs/core": "^2.9",
-        "@siwt/sdk": "^0.0.3",
-        "axios": "^1.3",
-        "bootstrap": "^5.0.0",
-        "cross-env": "^7.0",
-        "jquery": "^3.6",
-        "laravel-mix": "^6.0.49",
-        "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0",
-        "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
-    },
     "dependencies": {
-        "@hotwired/stimulus": "^3.2.1"
+        "@airgap/beacon-sdk": "^4.0.4",
+        "@siwt/sdk": "^0.0.3",
+        "alpinejs": "^3.12.1"
+    },
+    "devDependencies": {
+        "@tailwindcss/forms": "^0.5.3",
+        "laravel-mix": "^6.0.49",
+        "resolve-url-loader": "^3.1.0",
+        "stream-browserify": "^3.0.0",
+        "tailwindcss": "^3.3.2"
     }
 }
