--- a/app/package.json
+++ b/app/package.json
@@ -12,10 +12,13 @@
     "dependencies": {
         "@airgap/beacon-sdk": "^4.0.4",
         "@siwt/sdk": "^0.0.3",
+        "@taquito/taquito": "^16.2.0",
         "alpinejs": "^3.12.1"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.3",
+        "browser-sync": "^2.29.3",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "laravel-mix": "^6.0.49",
         "resolve-url-loader": "^3.1.0",
         "stream-browserify": "^3.0.0",
