--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,9 @@
     },
     "dependencies": {
         "@airgap/beacon-sdk": "^4.0.4",
+        "@alpinejs/focus": "^3.12.2",
+        "@awcodes/alpine-floating-ui": "^3.5.0",
+        "@floating-ui/dom": "^1.4.2",
         "@siwt/sdk": "^0.0.3",
         "@taquito/taquito": "^16.2.0",
         "alpinejs": "^3.12.1"
