refacto(taqueria): taquify project

--- a/app/config/.env.example
+++ b/app/config/.env.example
@@ -36,3 +36,5 @@ export SECURITY_SALT="__SALT__"
 # Uncomment these to define logging configuration via environment variables.
 #export LOG_DEBUG_URL="file:///path/to/logs/?levels[]=notice&levels[]=info&levels[]=debug&file=debug"
 #export LOG_ERROR_URL="file:///path/to/logs/?levels[]=warning&levels[]=error&levels[]=critical&levels[]=alert&levels[]=emergency&file=error"
+
+AIRDROP_CONTRACT_ADDRESS=
