--- a/app/config/.env.example
+++ b/app/config/.env.example
@@ -38,3 +38,4 @@ export SECURITY_SALT="__SALT__"
 #export LOG_ERROR_URL="file:///path/to/logs/?levels[]=warning&levels[]=error&levels[]=critical&levels[]=alert&levels[]=emergency&file=error"
 
 AIRDROP_CONTRACT_ADDRESS=
+RPC_URL=
