--- a/app/composer.json
+++ b/app/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.4",
         "bzzhh/pezos": "^0.1.5",
+        "bzzhh/tzkt-php-client": "^0.2.2",
         "cakephp/authentication": "^2.0",
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
