--- a/app/config/packages/security.yaml
+++ b/app/config/packages/security.yaml
@@ -4,14 +4,17 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+      app_member_provider:
+        entity:
+          class: App\Entity\Member
+          property: address
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_member_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
