--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@taqueria/plugin-contract-types": "^0.44.0",
     "@taqueria/plugin-core": "^0.44.0",
     "@taqueria/plugin-flextesa": "^0.44.0",
-    "@taqueria/plugin-ligo-legacy": "^0.44.0",
+    "@taqueria/plugin-ligo": "^0.45.0",
     "@taqueria/plugin-taquito": "^0.44.0",
     "@taqueria/plugin-tezos-client": "^0.39.0"
   }
