--- a/app/composer.json
+++ b/app/composer.json
@@ -13,7 +13,8 @@
         "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
         "friendsofcake/bootstrap-ui": "^5.0",
-        "mobiledetect/mobiledetectlib": "^4.8.03"
+        "mobiledetect/mobiledetectlib": "^4.8.03",
+        "passchn/cakephp-vite": "^2.4"
     },
     "require-dev": {
         "cakephp/bake": "^3.0.0",
