--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
         "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+        "@prettier/plugin-php": "^0.22.2",
         "@types/alpinejs": "^3.13.10",
         "@types/alpinejs__focus": "^3.13.4",
         "@vitejs/plugin-legacy": "^5.4.1",
