--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
         "@prettier/plugin-php": "^0.22.2",
         "@types/alpinejs": "^3.13.10",
         "@types/alpinejs__focus": "^3.13.4",
+        "@types/bootstrap": "^5.2.10",
         "@vitejs/plugin-legacy": "^5.4.1",
         "bootstrap-icons": "^1.11.3",
         "patch-package": "^8.0.0",
