--- a/app/.editorconfig
+++ b/app/.editorconfig
@@ -4,7 +4,7 @@
 root = true
 
 [*]
-indent_style = space
+indent_style = tab
 indent_size = 4
 end_of_line = lf
 insert_final_newline = true
@@ -14,10 +14,8 @@ trim_trailing_whitespace = true
 end_of_line = crlf
 
 [*.yml]
+indent_style = space
 indent_size = 2
-
-[*.twig]
-insert_final_newline = false
 
 [Makefile]
 indent_style = tab
