--- a/app/composer.json
+++ b/app/composer.json
@@ -21,6 +21,7 @@
         "cakephp/cakephp-codesniffer": "^5.1",
         "cakephp/debug_kit": "^5.0.0",
         "dereuromark/cakephp-ide-helper": "^2.2",
+        "fig-r/psr2r-sniffer": "^2.1",
         "josegonzalez/dotenv": "^4.0",
         "phpunit/phpunit": "^10.1.0"
     },
@@ -42,8 +43,8 @@
             "@test",
             "@cs-check"
         ],
-        "cs-check": "phpcs --colors -p  src/ tests/",
-        "cs-fix": "phpcbf --colors -p src/ tests/",
+        "cs-check": "phpcs --colors -p",
+        "cs-fix": "phpcbf --colors -p",
         "stan": "phpstan analyse",
         "test": "phpunit --colors=always"
     },
