--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,17 +1,23 @@
 {
-    "compilerOptions": {
-        "target": "esnext",
-        "useDefineForClassFields": false,
-        "module": "esnext",
-        "moduleResolution": "node",
-        "strict": true,
-        "jsx": "preserve",
-        "allowJs": true,
-        "sourceMap": true,
-        "resolveJsonModule": true,
-        "esModuleInterop": true,
-        "lib": ["esnext", "dom"],
-        "experimentalDecorators": true
-    },
-    "include": ["assets/**/*.ts", "assets/**/*.d.ts"]
+	"compilerOptions": {
+		"target": "esnext",
+		"useDefineForClassFields": false,
+		"module": "esnext",
+		"moduleResolution": "node",
+		"strict": true,
+		"jsx": "preserve",
+		"allowJs": true,
+		"sourceMap": true,
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
+		"lib": [
+			"esnext",
+			"dom"
+		],
+		"experimentalDecorators": true
+	},
+	"include": [
+		"assets/**/*.ts",
+		"assets/**/*.d.ts"
+	]
 }
