--- a/app/composer.json
+++ b/app/composer.json
@@ -1,60 +1,62 @@
 {
-    "name": "cakephp/app",
-    "description": "CakePHP skeleton app",
-    "homepage": "https://cakephp.org",
-    "type": "project",
-    "license": "MIT",
-    "require": {
-        "php": ">=8.1",
-        "bzzhh/pezos": "^0.1.5",
-        "bzzhh/tzkt-php-client": "^0.2.2",
-        "cakephp/authentication": "^3.0",
-        "cakephp/cakephp": "^5.0.1",
-        "cakephp/migrations": "^4.0.0",
-        "cakephp/plugin-installer": "^2.0",
-        "friendsofcake/bootstrap-ui": "^5.0",
-        "mobiledetect/mobiledetectlib": "^4.8.03",
-        "passchn/cakephp-vite": "^2.4"
-    },
-    "require-dev": {
-        "cakephp/bake": "^3.0.0",
-        "cakephp/cakephp-codesniffer": "^5.1",
-        "cakephp/debug_kit": "^5.0.0",
-        "dereuromark/cakephp-ide-helper": "^2.2",
-        "fig-r/psr2r-sniffer": "^2.1",
-        "josegonzalez/dotenv": "^4.0",
-        "phpunit/phpunit": "^10.1.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Test\\": "tests/",
-            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
-        }
-    },
-    "scripts": {
-        "post-install-cmd": "App\\Console\\Installer::postInstall",
-        "post-create-project-cmd": "App\\Console\\Installer::postInstall",
-        "check": [
-            "@test",
-            "@cs-check"
-        ],
-        "cs-check": "phpcs --colors -p",
-        "cs-fix": "phpcbf --colors -p",
-        "stan": "phpstan analyse",
-        "test": "phpunit --colors=always"
-    },
-    "prefer-stable": true,
-    "config": {
-        "sort-packages": true,
-        "allow-plugins": {
-            "cakephp/plugin-installer": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "php-http/discovery": true
-        }
-    }
+	"name": "cakephp/app",
+	"description": "CakePHP skeleton app",
+	"homepage": "https://cakephp.org",
+	"type": "project",
+	"license": "MIT",
+	"require": {
+		"php": ">=8.1",
+		"bzzhh/pezos": "^0.1.5",
+		"bzzhh/tzkt-php-client": "^0.2.2",
+		"cakephp/authentication": "^3.0",
+		"cakephp/cakephp": "^5.0.1",
+		"cakephp/migrations": "^4.0.0",
+		"cakephp/plugin-installer": "^2.0",
+		"friendsofcake/bootstrap-ui": "^5.0",
+		"mobiledetect/mobiledetectlib": "^4.8.03",
+		"passchn/cakephp-vite": "^2.4"
+	},
+	"require-dev": {
+		"cakedc/cakephp-phpstan": "^3.1",
+		"cakephp/bake": "^3.0.0",
+		"cakephp/cakephp-codesniffer": "^5.1",
+		"cakephp/debug_kit": "^5.0.0",
+		"dereuromark/cakephp-ide-helper": "^2.2",
+		"fig-r/psr2r-sniffer": "^2.1",
+		"josegonzalez/dotenv": "^4.0",
+		"phpstan/phpstan": "^1.11",
+		"phpunit/phpunit": "^10.1.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"App\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"App\\Test\\": "tests/",
+			"Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
+		}
+	},
+	"scripts": {
+		"post-install-cmd": "App\\Console\\Installer::postInstall",
+		"post-create-project-cmd": "App\\Console\\Installer::postInstall",
+		"check": [
+			"@test",
+			"@cs-check"
+		],
+		"cs-check": "phpcs --colors -p",
+		"cs-fix": "phpcbf --colors -p",
+		"stan": "DB_URL=sqlite:///:memory: phpstan analyse -vvvvv",
+		"test": "phpunit --colors=always"
+	},
+	"prefer-stable": true,
+	"config": {
+		"sort-packages": true,
+		"allow-plugins": {
+			"cakephp/plugin-installer": true,
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"php-http/discovery": true
+		}
+	}
 }
