--- a/app/phpstan.neon
+++ b/app/phpstan.neon
@@ -1,8 +1,19 @@
+includes:
+    - vendor/cakedc/cakephp-phpstan/extension.neon
+
 parameters:
-    level: 8
-    checkMissingIterableValueType: false
-    treatPhpDocTypesAsCertain: false
-    paths:
-        - src/
-    excludePaths:
-        - src/Console/Installer.php
+	level: 8
+
+	treatPhpDocTypesAsCertain: false
+
+	paths:
+		- src/
+
+	bootstrapFiles:
+		- %rootDir%/../../../tests/bootstrap.php
+
+	excludePaths:
+		- %rootDir%/../../../src/Console/Installer.php
+
+	ignoreErrors:
+		- identifier: missingType.generics
