--- a/app/composer.json
+++ b/app/composer.json
@@ -24,8 +24,10 @@
 		"dereuromark/cakephp-ide-helper": "^2.2",
 		"fig-r/psr2r-sniffer": "^2.1",
 		"josegonzalez/dotenv": "^4.0",
+		"phpstan/extension-installer": "^1.4",
 		"phpstan/phpstan": "^1.11",
-		"phpunit/phpunit": "^10.1.0"
+		"phpunit/phpunit": "^10.1.0",
+		"symplify/phpstan-rules": "^13.0"
 	},
 	"autoload": {
 		"psr-4": {
@@ -56,7 +58,8 @@
 		"allow-plugins": {
 			"cakephp/plugin-installer": true,
 			"dealerdirect/phpcodesniffer-composer-installer": true,
-			"php-http/discovery": true
+			"php-http/discovery": true,
+			"phpstan/extension-installer": true
 		}
 	}
 }
