--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,16 @@
 .DS_Store
-
-# taq
-artifacts/*
-!artifacts/.keep
-.taq/*-state.json
-.taq/config.local.*.json
-app/assets/js/types
-
-# dependencies
 node_modules/
 
-# ligo
-**/_esy
-**/.ligo
-**/_ligo
-**/ligo.esy.lock
+# taqueria
+artifacts
+.taq/*-state.json
+.taq/config.local.*.json
 
-testdata/
-!testdata/token.tz
-!testdata/token_storage.tz
+# ligo
+_ligo
+.ligo
+ligo.esy.lock/
+
+# testdata
+infra/testdata/*.mligo
+infra/testdata/*.json
