--- a/app/.gitignore
+++ b/app/.gitignore
@@ -14,7 +14,8 @@
 .Spotlight-V100
 .Trashes
 # Icon must end with two \r
-Icon
+Icon
+
 ehthumbs.db
 Thumbs.db
 .directory
@@ -22,7 +23,7 @@ Thumbs.db
 # Tool specific files #
 #######################
 # PHPUnit
-.phpunit.result.cache
+.phpunit.cache
 tests.sqlite
 # vim
 *~
@@ -51,5 +52,13 @@ nbproject/*
 yarn-debug.log
 yarn-error.log
 
-# build
-/webroot/dist
+# logs
+php_errors.log
+
+# CakePHP
+/webroot/debug_kit
+
+# Plugins
+/webroot/bootstrap_u_i
+/webroot/cake_tezos
+
