--- a/app/composer.json
+++ b/app/composer.json
@@ -6,20 +6,21 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=8.1",
-		"bzzhh/pezos": "^0.1.5",
-		"bzzhh/tzkt-php-client": "^0.2.2",
 		"cakephp/authentication": "^3.0",
 		"cakephp/cakephp": "^5.0.1",
 		"cakephp/migrations": "^4.0.0",
 		"cakephp/plugin-installer": "^2.0",
 		"friendsofcake/bootstrap-ui": "^5.0",
 		"mobiledetect/mobiledetectlib": "^4.8.03",
-		"passchn/cakephp-vite": "^2.4"
+		"ziwot/cake-tezos": "^0.0.1",
+		"ziwot/tzkt-php-client": "^0.3.1",
+		"zunnu/cake-htmx": "^1.0"
 	},
 	"require-dev": {
 		"cakedc/cakephp-phpstan": "^3.1",
 		"cakephp/bake": "^3.0.0",
 		"cakephp/debug_kit": "^5.0.0",
+		"cakephp/repl": "^2.0",
 		"dereuromark/cakephp-ide-helper": "^2.2",
 		"josegonzalez/dotenv": "^4.0",
 		"php-collective/code-sniffer": "^0.2.16",
