--- a/app/composer.json
+++ b/app/composer.json
@@ -1,65 +1,61 @@
 {
-	"name": "cakephp/app",
-	"description": "CakePHP skeleton app",
-	"homepage": "https://cakephp.org",
-	"type": "project",
-	"license": "MIT",
-	"require": {
-		"php": ">=8.1",
-		"cakephp/authentication": "^3.0",
-		"cakephp/cakephp": "^5.0.1",
-		"cakephp/migrations": "^4.0.0",
-		"cakephp/plugin-installer": "^2.0",
-		"friendsofcake/bootstrap-ui": "^5.0",
-		"mobiledetect/mobiledetectlib": "^4.8.03",
-		"ziwot/cake-tezos": "^0.0.1",
-		"ziwot/tzkt-php-client": "^0.3.1",
-		"zunnu/cake-htmx": "^1.0"
-	},
-	"require-dev": {
-		"cakedc/cakephp-phpstan": "^3.1",
-		"cakephp/bake": "^3.0.0",
-		"cakephp/debug_kit": "^5.0.0",
-		"cakephp/repl": "^2.0",
-		"dereuromark/cakephp-ide-helper": "^2.2",
-		"josegonzalez/dotenv": "^4.0",
-		"php-collective/code-sniffer": "^0.2.16",
-		"phpstan/extension-installer": "^1.4",
-		"phpstan/phpstan": "^1.11",
-		"phpunit/phpunit": "^10.1.0",
-		"symplify/phpstan-rules": "^13.0"
-	},
-	"autoload": {
-		"psr-4": {
-			"App\\": "src/"
-		}
-	},
-	"autoload-dev": {
-		"psr-4": {
-			"App\\Test\\": "tests/",
-			"Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
-		}
-	},
-	"scripts": {
-		"post-install-cmd": "App\\Console\\Installer::postInstall",
-		"post-create-project-cmd": "App\\Console\\Installer::postInstall",
-		"check": [
-			"@test",
-			"@cs-check"
-		],
-		"cs-check": "phpcs -s --colors -p",
-		"cs-fix": "phpcbf --colors -p",
-		"stan": "phpstan analyse",
-		"test": "phpunit --colors=always"
-	},
-	"prefer-stable": true,
-	"config": {
-		"sort-packages": true,
-		"allow-plugins": {
-			"cakephp/plugin-installer": true,
-			"dealerdirect/phpcodesniffer-composer-installer": true,
-			"php-http/discovery": true,
-			"phpstan/extension-installer": true
-		}
-	}
+    "name": "ziwot/merkle-airdrop",
+    "description": "Demo Merkle Airdrop on Tezos",
+    "type": "project",
+    "license": "MIT",
+    "require": {
+        "php": ">=8.1",
+        "cakephp/authentication": "^3.0",
+        "cakephp/cakephp": "^5.0.1",
+        "cakephp/migrations": "^4.0.0",
+        "cakephp/plugin-installer": "^2.0",
+        "friendsofcake/bootstrap-ui": "^5.0",
+        "mobiledetect/mobiledetectlib": "^4.8.03",
+        "ziwot/cake-tezos": "^0.0.2",
+        "zunnu/cake-htmx": "^1.0"
+    },
+    "require-dev": {
+        "cakedc/cakephp-phpstan": "^3.1",
+        "cakephp/bake": "^3.0.0",
+        "cakephp/debug_kit": "^5.0.0",
+        "cakephp/repl": "^2.0",
+        "dereuromark/cakephp-ide-helper": "^2.2",
+        "josegonzalez/dotenv": "^4.0",
+        "php-collective/code-sniffer": "^0.2.16",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^1.11",
+        "phpunit/phpunit": "^10.1.0",
+        "symplify/phpstan-rules": "^13.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Test\\": "tests/",
+            "Cake\\Test\\": "vendor/cakephp/cakephp/tests/"
+        }
+    },
+    "scripts": {
+        "check": [
+            "@test",
+            "@cs-check"
+        ],
+        "cs-check": "phpcs -s --colors -p",
+        "cs-fix": "phpcbf --colors -p",
+        "stan": "phpstan analyse",
+        "test": "phpunit --colors=always"
+    },
+    "prefer-stable": true,
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "cakephp/plugin-installer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "php-http/discovery": true,
+            "phpstan/extension-installer": true
+        }
+    }
 }
