--- a/infra/package.json
+++ b/infra/package.json
@@ -1,27 +1,36 @@
 {
-    "name": "infra",
+    "name": "testdata",
     "version": "1.0.0",
-    "description": "Infra Scripts",
+    "description": "Testdata Scripts",
     "scripts": {
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
-        "testdata": "ts-node ./testdata.ts",
-        "bootstrapped": "ts-node ./bootstrapped.ts"
+        "bootstrapped": "tsx ./bootstrapped.ts",
+        "make:accounts": "tsx ./makeAccounts.ts",
+        "make:drops": "tsx ./makeDrops.ts",
+        "make:token": "tsx ./makeToken.ts",
+        "make:proof": "tsx ./makeProof.ts"
     },
     "devDependencies": {
-        "@taquito/michel-codec": "^20.1.0",
+        "@eslint/eslintrc": "^3.3.1",
+        "@eslint/js": "^9.32.0",
+        "@taquito/michel-codec": "^22.0.0",
         "@types/crypto-js": "^4.2.2",
-        "@typescript-eslint/eslint-plugin": "^8.13.0",
-        "@typescript-eslint/parser": "^8.13.0",
+        "@types/hjson": "^2.4.6",
+        "@types/node": "^24.1.0",
+        "@typescript-eslint/eslint-plugin": "^8.38.0",
+        "@typescript-eslint/parser": "^8.38.0",
         "crypto-js": "^4.2.0",
-        "dotenv": "^16.4.5",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.2.1",
-        "merkletreejs": "^0.4.0",
-        "npm-check-updates": "^17.1.10",
-        "prettier": "^3.3.3",
-        "sotez": "^13.0.1",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.6.3"
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.3",
+        "globals": "^16.3.0",
+        "hjson": "^3.2.2",
+        "merkletreejs": "^0.5.2",
+        "npm-check-updates": "^18.0.2",
+        "prettier": "^3.6.2",
+        "sotez": "^11.0.0",
+        "tsx": "^4.20.3",
+        "typescript": "^5.8.3",
+        "unique-names-generator": "^4.7.1"
     }
 }
